--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <i class="fa-solid fa-calculator"></i>
             <h2>Dynamic Calculator</h2>
                     <p>Dynamic Calculator</p>
-                    <a href="./dynamiccalc.html">Learn more</a>
+                    <a href="https://darshanashok.github.io/Projects/gussinggame/Guessinggame.html">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-stopwatch"></i>
